# BabyLM_CL_RYS

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: datasets.ipynb  rys_analysis.ipynb
notebooks/rys_results/: rys_baseline_summary.csv  rys_cl2_dale_chall.csv  rys_cl2_gunning_fog.csv  rys_cl3_summary.csv  rys_cl4_descending.csv  rys_cl4_surrogate.csv
src/datasets/tokenization/: tokenizer_utilities_nooverlap.py  tokenizer_utilities_tokmix.py  train_baseline_modernBERT.py  train_nooverlap_fixed.py  train_nooverlap_modernBERT.py  train_tokmix_fixed.py  train_tokmix_modernBERT.py
src/evaluation/AoA/: eval_aoa.sh  evaluation_functions_modified.py  run_modified.py
src/evaluation/zero_shot/: compute_results_modified.py  eval_zero_shot.sh  eval_zero_shot_fast.sh  run_modified.py
src/experiments/CL4_experiment_random/: influence_matrix.py  training_CL4_descending.py
src/experiments/CL4_experiment_random/influence_score_results/: influence_metadata.json
src/experiments/cl4_document_level_fixed/: README.md  cl4_common.py  influence_matrix_document_level.py  training_CL4_descending_document_level.py  training_CL4_random_document_level.py
src/training/: training_CL2_dale_chall.py  training_CL2_nomal_complexity_gunning_fog.py  training_CL3_normal.py  training_CL4_random.py  training_CL5_weebit.py
